# litcovers-api

./: Cargo.toml
src/: error.rs  lib.rs  main.rs  overlay.rs  router.rs  settings.rs
src/overlay/: handlers.rs  helpers.rs  image.rs  mod.rs  text.rs
tests/: app_state.rs  health_check.rs
