[package]
name = "litcovers-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.6"
serde = { version = "1", features = ["derive"] }
rusttype = "0.9.2"
image = "0.24.4"
textwrap = { version = "0.16.0", features = ["smawk"] }
reqwest = {version = "0.11.12", features = ["json"] }
serde_json = "1"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0.29"
anyhow = "1"
unicode-segmentation = "1.10.0"
